# ThreeBodyDecays

./: #CMakeLists.txt#  .gitignore  BlattWeisskopf.cpp  BlattWeisskopf.hh  CMakeLists.txt  ClebschGordan.cpp  ClebschGordan.hh  FormFactors.cpp  FormFactors.hh  OrientationAngles.cpp  README.md  ThreeBodyAmplitudeModel.cpp  ThreeBodyAmplitudeModel.hh  ThreeBodyDecays.cpp  ThreeBodyDecays.hh  test-orientation-angles.html
.github/workflows/: ci.yml
Examples/: AmplitudeModelExample.cpp  CombinedAmplitudeExample.cpp  Phase space for a three-body decay — Common Partial Wave Analysis Project.html
Examples/Phase space for a three-body decay — Common Partial Wave Analysis Project_files/: annotator.bundle.js  highlights.css  hypothesis
Tests/: BWTest.cpp  BlattWeisskopfTest.cpp  ClebschGordanTest.cpp  FormFactorsTest.cpp  JsonModelTest.cpp  OrientationAnglesTest.cpp  ThreeBodyAmplitudeModelTest.cpp  ThreeBodyDecaysTest.cpp  WignerFunctionsTest.cpp
include/: FormFactors.hh  Lineshapes.hh  OrientationAngles.hh  SpinParity.hh  Structures.hh  ThreeBodyAmplitudeModel.hh  ThreeBodyDecays.hh  WignerFunctions.hh  WignerRotation.hh  jacobi.hh
src/: ClebschGordan.cpp  FormFactors.cpp  OrientationAngles.cpp  SpinParity.cpp  ThreeBodyAmplitudeModel.cpp  ThreeBodyDecays.cpp  WignerFunctions.cpp  WignerRotation.cpp
